<resources>
    <string name="app_name">BimUtp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Mi Bim</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_register1">RegisterActivity1</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="reporteDepositos">Reporte Depósitos</string>
    <string name="mandaPlata">Manda Plata</string>
    <string name="recargaUnCe">Recarga un celular</string>
    <string name="pagaYanbal">Paga Yanbal</string>
    <string name="pagaServicios">Paga Servicios</string>
    <string name="sacaPlata">Saca Plata</string>
    <string name="pagaCompra">Paga tu Compra</string>
    <string name="pagaSunat">Paga Sunat-RUS</string>
    <string name="promociones">Promociones</string>
    <string name="contactanos">Contáctanos</string>
    <string name="perfil">Mi Perfil Bim</string>
    <string name="cerrarSesion">Cerrar Sesión</string>

    <string name="ultMovi">Últimos movimientos</string>
</resources>