<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/convierteBimer"
            android:title="Conviertete en Bimer" />
        <item
            android:id="@+id/reporteSentinel"
            android:title="@string/reporteSentinel" />
        <item
            android:id="@+id/mandaPlata"
            android:title="@string/mandaPlata" />
        <item
            android:id="@+id/recargaCelular"
            android:title="@string/recargaUnCe" />
        <item
            android:id="@+id/pagaYanbal"
            android:title="@string/pagaYanbal" />
        <item
            android:id="@+id/pagaServicios"
            android:title="@string/pagaServicios" />
        <item
            android:id="@+id/sacaPlata"
            android:title="@string/sacaPlata" />
        <item
            android:id="@+id/pagaCompra"
            android:title="@string/pagaCompra" />
        <item
            android:id="@+id/pagaSunat"
            android:title="@string/pagaSunat" />
        <item
            android:id="@+id/promociones"
            android:title="@string/promociones" />
        <item
            android:id="@+id/contacta"
            android:title="@string/contactanos" />
        <item
            android:id="@+id/perfil"
            android:title="@string/perfil" />

    </group>
</menu>